--- a/p2p-web/src/components/VehicleGrid.module.css
+++ b/p2p-web/src/components/VehicleGrid.module.css
@@ -1,5 +1,5 @@
 .gridContainer {
-  max-width: 1280px;
+  max-width: 1536px;
   margin: 0 auto;
   padding: 32px 128px 64px;
 }
@@ -56,11 +56,17 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 24px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1400px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1024px) {
   .grid {
     grid-template-columns: repeat(2, 1fr);
   }
